2005-07-19  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (make_dv_pipeline),
	(make_vorbis_theora_pipeline), (query_rates),
	(query_positions_elems), (query_positions_pads), (do_seek):
	Make correct DV pipeline.

2005-07-18  Andy Wingo  <wingo@pobox.com>

	* configure.ac (DEFAULT_AUDIOSINK, DEFAULT_AUDIOSRC): Use alsa by
	default. Also because it's the only thing that really works. (This
	is used in the GConf elements).
	Use AS_LIBTOOL_TAGS.

2005-07-18  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstdecodebin.c: (remove_element_chain):
	* gst/playback/gstplaybin.c: (add_sink):
	* gst/playback/gststreaminfo.c: (gst_stream_info_dispose),
	(gst_stream_info_set_mute):
	* gst/playback/gststreamselector.c:
	(gst_stream_selector_get_linked_pad),
	(gst_stream_selector_getcaps), (gst_stream_selector_chain):
	More leak and compile fixes.

2005-07-18  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (make_vorbis_theora_pipeline),
	(query_rates), (query_positions_elems), (query_positions_pads),
	(do_seek), (seek_cb), (stop_seek):
	Updated seek example. 

	* gst/playback/gstdecodebin.c: (remove_element_chain), (unlinked):
	* gst/playback/gstplaybasebin.c: (queue_threshold_reached),
	(queue_out_of_data), (gen_preroll_element), (new_decoded_pad):
	* gst/playback/gstplaybin.c: (add_sink):
	* gst/playback/gststreaminfo.c: (gst_stream_info_dispose),
	(gst_stream_info_set_mute):
	Some refcount leak fixes.

2005-07-16  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	Align samples even if we have roundoff errors in the 
	timestamp conversion.

2005-07-16  Wim Taymans  <wim@fluendo.com>

	* docs/libs/tmpl/gstringbuffer.sgml:
	* examples/seeking/seek.c: (make_vorbis_theora_pipeline),
	(query_rates), (query_positions_elems), (query_positions_pads),
	(update_scale), (do_seek):
	Updated seek example.

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_submit_packet),